--- a/views/auth/partials/navbar.ejs
+++ b/views/auth/partials/navbar.ejs
@@ -18,6 +18,7 @@
           </div>
           <button type="submit" class="btn btn-default"><span class="glyphicon glyphicon-search"></span></button>
         </form>
+        <li><a href='/about'>About</a></li>
         <li><a href="/auth/signup" class='conversion'><span class="glyphicon glyphicon-log-in"></span> Register</a></li>
         <li><a href="/auth/login"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
