--- a/views/post/singleuserarticleview.ejs
+++ b/views/post/singleuserarticleview.ejs
@@ -12,29 +12,32 @@
 
   <div class="col-sm-8 text-left">
 
-    <% if (articles) { %>
-      <h1>Latest articles from the stream...</h1>
-      <% for (var i = (articles.length - 1); i > -1; i--) {  %>
-       <hr>
-       <h2><a href="/post/<%=articles[i]._id%>" class='interaction'><%= articles[i].title %></a></h2>
-       <h5><a href="/user/<%=articles[i].user._id%>"> By <%= articles[i].user.name.firstname %> <%= articles[i].user.name.lastname %></a></h5>
-       <h5><span class="glyphicon glyphicon-time"></span> Posted on <%= articles[i].created_at %></h5>
-         <% let createdTime = new Date(articles[i].created_at) %>
-         <% let updatedTime = new Date(articles[i].updated_at) %>
-          <% if (createdTime.toUTCString() === updatedTime.toUTCString()) { %>
-          <%  } else { %>
-          <h5 style="font-style:italic"><span class="glyphicon glyphicon-time"></span> Updated on <%= articles[i].updated_at %></h5>
-          <% } %>
-       <h5><span class="label label-primary"><%= articles[i].tags %></span></h5><br>
-       <p><%= articles[i].article %></p>
-       <hr>
-      <% } %>
+  <% if (myarticles) { %>
 
+    <h1>Latest articles from <%= myarticles.name.firstname %></h1>
+
+    <% for (var i = (myarticles.posts.length - 1); i > -1; i--) { %>
+     <hr>
+     <h2><a href="/post/<%=myarticles.posts[i]._id%>" class='interaction'><%= myarticles.posts[i].title %></a></h2>
+     <h5>By <%= myarticles.name.firstname %> <%= myarticles.name.lastname %></h5>
+     <h5><span class="glyphicon glyphicon-time"></span> Posted on <%= myarticles.posts[i].created_at %></h5>
+       <% let createdTime = new Date(myarticles.posts[i].created_at) %>
+       <% let updatedTime = new Date(myarticles.posts[i].updated_at) %>
+        <% if (createdTime.toUTCString() === updatedTime.toUTCString()) { %>
+          <%  } else { %>
+          <h5 style="font-style:italic"><span class="glyphicon glyphicon-time"></span> Updated on <%= myarticles.posts[i].updated_at %></h5>
+        <% } %>
+
+     <h5><span class="label label-primary"><%= myarticles.posts[i].tags %></span></h5><br>
+     <p><%= myarticles.posts[i].article %></p>
+     <hr>
+
+     <% } %>
     <% } %>
      </div>
 
   <div class="col-sm-2 sidenav">
-    <% if (currentUser || (!currentUser && news)) {%>
+    <% if ((currentUser || !currentUser) && news) {%>
       <p>Latest tech news</p>
       <% news.forEach(function (val, index) { %>
       <div class="well">
